# setup.cfg
[metadata]
name = django-open-ai
version = 0.0.1
description = Use the power of OpenAI on your Django database
long_description = file:README.rst
url = https://github.com/PMCS64/django-open-ai
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.10
install_requires = Django>=4.2